#
# Copyright (C) 2024 Stephen Street
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

add_subdirectory(rtos-hog-test)
add_subdirectory(rtos-multicore-hog-test)
add_subdirectory(rtos-threads-test)
add_subdirectory(rtos-multicore-threads-test)
add_subdirectory(cmsis-rtos2-validation)
add_subdirectory(backtrace-test)
add_subdirectory(fault-test)
add_subdirectory(multicore-irq-test)
add_subdirectory(rtos-benchmark)
add_subdirectory(nmi-test)
add_subdirectory(rtt-test)
add_subdirectory(atomic-test)
#add_subdirectory(thread-metric)

